<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.lamnguyen</groupId>
    <artifactId>mat_kinh_kimi</artifactId>
    <packaging>war</packaging>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <version>1.0-SNAPSHOT</version>
    <name>Mat Kinh Kimi webapp</name>
    <url>http://maven.apache.org</url>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jdbi/jdbi3-core -->
        <dependency>
            <groupId>org.jdbi</groupId>
            <artifactId>jdbi3-core</artifactId>
            <version>3.41.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>jakarta.mail</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>
        <dependency>
            <groupId>system.activation</groupId>
            <artifactId>activation</artifactId>
            <version>1.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/activation-1.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.ckfinder</groupId>
            <artifactId>ckfinder</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/CKFinder-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.ckfinder</groupId>
            <artifactId>ckfinder</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/CKFinder-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-FileEditor</groupId>
            <artifactId>CKFinderPlugin-FileEditor</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/CKFinderPlugin-FileEditor-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-ImageResize</groupId>
            <artifactId>CKFinderPlugin-ImageResize</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/CKFinderPlugin-ImageResize-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.CKFinderPlugin-Watermark</groupId>
            <artifactId>CKFinderPlugin-Watermark</artifactId>
            <version>2.6.2.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/CKFinderPlugin-Watermark-2.6.2.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.2.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/commons-fileupload-1.2.2.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/commons-io-2.0.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/gson-2.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.jboss-logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>3.1.4.GA</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/jboss-logging-3.1.4.GA.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.jboss-vfs</groupId>
            <artifactId>jboss-vfs</artifactId>
            <version>3.2.11.Final</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/jboss-vfs-3.2.11.Final.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/mail-1.4.1.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.thumbnailator</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.8</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/thumbnailator-0.4.8.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>system.jsp-api</groupId>
            <artifactId>jsp-api</artifactId>
            <version>2.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/jsp-api-2.0.jar</systemPath>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!-- Jackson Core -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.13.0</version> <!-- Use the latest version -->
        </dependency>

        <!-- Jackson Databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.0</version> <!-- Use the latest version -->
        </dependency>

        <!-- Jackson Annotations -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.13.0</version> <!-- Use the latest version -->
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/fluent-hc -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>fluent-hc</artifactId>
            <version>4.5.14</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>project_ban_mat_kinh</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
